--- a/Question Page/questionList.html
+++ b/Question Page/questionList.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <div class="web-bar">
-        <h1 style="color: white; margin: 5px;">List Of Quizes</h1> 
+        <h1 style="color: white; margin: 5px;">List Of Questions</h1> 
     </div>
     
 </body>
