--- a/first page/homePage.html
+++ b/first page/homePage.html
@@ -17,7 +17,7 @@
                     <h1 id="t5">A PSEU Project</h1>
         </div>
         <div class="pic-div"> 
-                     <img id="pic1" src="C:\Users\hp\Desktop\Challenger\pic\11.png" >
+                     <img id="pic1" src="..\pic\11.png" >
         </div>
     </div>
     <div class="sec">
@@ -72,7 +72,7 @@
             </div>
     
             <div class="pic"> 
-                        <img id="pic2" src="C:\Users\hp\Desktop\Challenger\pic\22.png" >
+                        <img id="pic2" src="..\pic\22.png" >
             </div>
         </div>
         <div class="footer">
