javascript file is added, and other things are modified

--- a/FirstPage/homePage.html
+++ b/FirstPage/homePage.html
@@ -21,38 +21,8 @@
         </div>
     </div>
     <div class="sec">
-        <div class="buttons">
+        <div id="List">
             <input type="submit" value="Random" style="background: linear-gradient(90deg, #E958A2 0%,#C13EA6 ,#9923AA  100%);  border-radius: 12px;            ">
-            <input type="submit" value="HTML/CSS">
-            <input type="submit" value="JS">
-            <input type="submit" value="OOP">
-            <input type="submit" value="Database">
-            <input type="submit" value="NoSQL">
-            <input type="submit" value="UI/UX">
-            <input type="submit" value="DataMining">
-            <input type="submit" value="Automation">
-            <input type="submit" value="QA">
-            <input type="submit" value="Architecture">
-            <input type="submit" value="Data Structure">
-            <input type="submit" value="Design Pattern">
-            <input type="submit" value="PHP">
-            <input type="submit" value="ASP.NET Core">
-            <input type="submit" value="ASP.NET MVC">
-            <input type="submit" value="Python">
-            <input type="submit" value="Server Administration">
-            <input type="submit" value="Reactive Programming">
-            <input type="submit" value="GraphQL">
-            <input type="submit" value="PWA">
-            <input type="submit" value="Java">
-            <input type="submit" value="ObjectivC">
-            <input type="submit" value="Web Security">
-            <input type="submit" value="DevOps">
-            <input type="submit" value="TypeScript">
-            <input type="submit" value="Angular">
-            <input type="submit" value="AngularJS">
-            <input type="submit" value="ReactJS">
-            <input type="submit" value="MongoDB">
-            <input type="submit" value="Redis">
         </div>
         <div class="exbanded">
             <input type="submit" value="START YOUR QUIZ" style=" width: 400px;height: 100px; background-color: #9A24A9; color:white;margin: 0px;
