--- a/QuizPage/quizList.html
+++ b/QuizPage/quizList.html
@@ -9,6 +9,8 @@
     <div class="web-bar">
         <h1 style="color: white; margin: 5px;">List Of Quizes</h1> 
     </div>
-    
+    <div id="list-of-quizzes">
+
+    </div>
 </body>
 </html>
