--- a/TopicPage/topicList.html
+++ b/TopicPage/topicList.html
@@ -9,6 +9,8 @@
     <div class="web-bar">
         <h1 style="color: white; margin: 5px;">List Of Topics</h1> 
     </div>
-    
+    <div id="list-of-topics">
+        
+    </div>
 </body>
 </html>
