--- a/QuestionPage/questionList.html
+++ b/QuestionPage/questionList.html
@@ -9,6 +9,10 @@
     <div class="web-bar">
         <h1 style="color: white; margin: 5px;">List Of Questions</h1> 
     </div>
-    
+    <div id="list-of-question">
+
+    </div>
+    <script type="text/javascript" src="../QuestionPage/listQuestion.js"></script>
+
 </body>
 </html>
