--- a/QuizPage/quiz.html
+++ b/QuizPage/quiz.html
@@ -31,5 +31,7 @@
 
         </section>
     </div>   
+    <script type="text/javascript" src="../QuizPage/addQuiz.js"></script>
+
 </body>
 </html>
