--- a/TopicPage/topic.html
+++ b/TopicPage/topic.html
@@ -25,5 +25,7 @@
 
         </section>
     </div>   
+    <script type="text/javascript" src="../TopicPage/addTopic.js"></script>
+
 </body>
 </html>
