--- a/TopicPage/topicList.html
+++ b/TopicPage/topicList.html
@@ -12,5 +12,7 @@
     <div id="list-of-topics">
         
     </div>
+    <script type="text/javascript" src="../TopicPage/listTopic.js"></script>
+
 </body>
 </html>
