--- a/FirstPage/homePage.html
+++ b/FirstPage/homePage.html
@@ -23,6 +23,10 @@
     <div class="sec">
         <div id="List">
             <input type="submit" value="Random" style="background: linear-gradient(90deg, #E958A2 0%,#C13EA6 ,#9923AA  100%);  border-radius: 12px;            ">
+            
+            <span id="Subjects">
+                
+            </span>
         </div>
         <div class="exbanded">
             <input type="submit" value="START YOUR QUIZ" style=" width: 400px;height: 100px; background-color: #9A24A9; color:white;margin: 0px;
@@ -50,5 +54,6 @@
             <h1 id="h2">A PSEU Project <br>
                 About . Team . How to . License</h1>
         </div>
+        <script type="text/javascript" src="../FirstPage/homePageJs.js"></script>
 </body>
 </html>
