--- a/QuizPage/quizList.html
+++ b/QuizPage/quizList.html
@@ -12,5 +12,7 @@
     <div id="list-of-quizzes">
 
     </div>
+    <script type="text/javascript" src="../QuizPage/listQuiz.js"></script>
+
 </body>
 </html>
